--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "bin": "bin.js",
   "repository": "git@github.com:michaelrhodes/mkr",
-  "license": "MIT",
+  "license": "CC0-1.0",
   "dependencies": {
     "ini": "~1.3.5",
     "module-root": "~0.2.0",
